@@ -67,7 +67,6 @@ import sun.awt.AWTAccessor;
 import sun.awt.ConstrainableGraphics;
 import sun.awt.SubRegionShowable;
 import sun.awt.SunToolkit;
-import sun.awt.WindowClosingListener;
 import sun.awt.CausedFocusEvent;
 import sun.awt.EmbeddedFrame;
 import sun.awt.dnd.SunDropTargetEvent;
@@ -544,8 +543,6 @@ public abstract class Component implements ImageObserver, MenuContainer,
     transient MouseWheelListener mouseWheelListener;
     transient InputMethodListener inputMethodListener;
 
-    transient RuntimeException windowClosingException = null;
-
     /** Internal, constants for serialization */
     final static String actionListenerK = "actionL";
     final static String adjustmentListenerK = "adjustmentL";
@@ -1018,7 +1015,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Gets the name of the component.
      * @return this component's name
      * @see    #setName
-     * @since JDK1.1
+     * @since 1.1
      */
     public String getName() {
         if (name == null && !nameExplicitlySet) {
@@ -1035,7 +1032,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param name  the string that is to be this
      *           component's name
      * @see #getName
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setName(String name) {
         String oldName;
@@ -1050,7 +1047,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
     /**
      * Gets the parent of this component.
      * @return the parent container of this component
-     * @since JDK1.0
+     * @since 1.0
      */
     public Container getParent() {
         return getParent_NoClientCode();
@@ -1075,6 +1072,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @deprecated As of JDK version 1.1,
      * programs should not directly manipulate peers;
      * replaced by <code>boolean isDisplayable()</code>.
+     * @return the peer for this component
      */
     @Deprecated
     public ComponentPeer getPeer() {
@@ -1132,6 +1130,8 @@ public abstract class Component implements ImageObserver, MenuContainer,
     /**
      * Gets the <code>DropTarget</code> associated with this
      * <code>Component</code>.
+     *
+     * @return the drop target
      */
 
     public synchronized DropTarget getDropTarget() { return dropTarget; }
@@ -1221,7 +1221,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * toolkit is used by that component. Therefore if the component
      * is moved from one frame to another, the toolkit it uses may change.
      * @return  the toolkit of this component
-     * @since JDK1.0
+     * @since 1.0
      */
     public Toolkit getToolkit() {
         return getToolkitImpl();
@@ -1250,7 +1250,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * otherwise
      * @see #validate
      * @see #invalidate
-     * @since JDK1.0
+     * @since 1.0
      */
     public boolean isValid() {
         return (peer != null) && valid;
@@ -1292,7 +1292,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return <code>true</code> if the component is visible,
      * <code>false</code> otherwise
      * @see #setVisible
-     * @since JDK1.0
+     * @since 1.0
      */
     @Transient
     public boolean isVisible() {
@@ -1419,7 +1419,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return <code>true</code> if the component is showing,
      *          <code>false</code> otherwise
      * @see #setVisible
-     * @since JDK1.0
+     * @since 1.0
      */
     public boolean isShowing() {
         if (visible && (peer != null)) {
@@ -1437,7 +1437,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return <code>true</code> if the component is enabled,
      *          <code>false</code> otherwise
      * @see #setEnabled
-     * @since JDK1.0
+     * @since 1.0
      */
     public boolean isEnabled() {
         return isEnabledImpl();
@@ -1466,7 +1466,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *            enabled; otherwise this component is disabled
      * @see #isEnabled
      * @see #isLightweight
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setEnabled(boolean b) {
         enable(b);
@@ -1498,6 +1498,11 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * Enables or disables this component.
+     *
+     * @param  b {@code true} to enable this component;
+     *         otherwise {@code false}
+     *
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setEnabled(boolean)</code>.
      */
@@ -1611,7 +1616,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * otherwise, hides this component
      * @see #isVisible
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setVisible(boolean b) {
         show(b);
@@ -1656,6 +1661,11 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * Makes this component visible or invisible.
+     *
+     * @param  b {@code true} to make this component visible;
+     *         otherwise {@code false}
+     *
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setVisible(boolean)</code>.
      */
@@ -1739,7 +1749,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * not have a foreground color, the foreground color of its parent
      * is returned
      * @see #setForeground
-     * @since JDK1.0
+     * @since 1.0
      * @beaninfo
      *       bound: true
      */
@@ -1760,7 +1770,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          then this component will inherit
      *          the foreground color of its parent
      * @see #getForeground
-     * @since JDK1.0
+     * @since 1.0
      */
     public void setForeground(Color c) {
         Color oldColor = foreground;
@@ -1796,7 +1806,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          not have a background color,
      *          the background color of its parent is returned
      * @see #setBackground
-     * @since JDK1.0
+     * @since 1.0
      */
     @Transient
     public Color getBackground() {
@@ -1819,7 +1829,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          if this parameter is <code>null</code>, then this
      *          component will inherit the background color of its parent
      * @see #getBackground
-     * @since JDK1.0
+     * @since 1.0
      * @beaninfo
      *       bound: true
      */
@@ -1856,7 +1866,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return this component's font; if a font has not been set
      * for this component, the font of its parent is returned
      * @see #setFont
-     * @since JDK1.0
+     * @since 1.0
      */
     @Transient
     public Font getFont() {
@@ -1887,7 +1897,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          component will inherit the font of its parent
      * @see #getFont
      * @see #invalidate
-     * @since JDK1.0
+     * @since 1.0
      * @beaninfo
      *       bound: true
      */
@@ -1940,7 +1950,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          does not have its own locale and has not yet been added to
      *          a containment hierarchy such that the locale can be determined
      *          from the containing parent
-     * @since  JDK1.1
+     * @since  1.1
      */
     public Locale getLocale() {
         Locale locale = this.locale;
@@ -1965,7 +1975,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param l the locale to become this component's locale
      * @see #getLocale
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setLocale(Locale l) {
         Locale oldValue = locale;
@@ -1986,7 +1996,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see java.awt.image.ColorModel
      * @see java.awt.peer.ComponentPeer#getColorModel()
      * @see Toolkit#getColorModel()
-     * @since JDK1.0
+     * @since 1.0
      */
     public ColorModel getColorModel() {
         ComponentPeer peer = this.peer;
@@ -2016,7 +2026,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *          the coordinate space of the component's parent
      * @see #setLocation
      * @see #getLocationOnScreen
-     * @since JDK1.1
+     * @since 1.1
      */
     public Point getLocation() {
         return location();
@@ -2068,6 +2078,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
 
 
     /**
+     * Returns the location of this component's top left corner.
+     *
+     * @return the location of this component's top left corner
      * @deprecated As of JDK version 1.1,
      * replaced by <code>getLocation()</code>.
      */
@@ -2095,13 +2108,20 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #getLocation
      * @see #setBounds
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setLocation(int x, int y) {
         move(x, y);
     }
 
     /**
+     * Moves this component to a new location.
+     *
+     * @param  x the <i>x</i>-coordinate of the new location's
+     *           top-left corner in the parent's coordinate space
+     * @param  y the <i>y</i>-coordinate of the new location's
+     *           top-left corner in the parent's coordinate space
+     *
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setLocation(int, int)</code>.
      */
@@ -2127,7 +2147,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #getLocation
      * @see #setBounds
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setLocation(Point p) {
         setLocation(p.x, p.y);
@@ -2143,13 +2163,18 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return a <code>Dimension</code> object that indicates the
      *          size of this component
      * @see #setSize
-     * @since JDK1.1
+     * @since 1.1
      */
     public Dimension getSize() {
         return size();
     }
 
     /**
+     * Returns the size of this component in the form of a
+     * {@code Dimension} object.
+     *
+     * @return the {@code Dimension} object that indicates the
+     *         size of this component
      * @deprecated As of JDK version 1.1,
      * replaced by <code>getSize()</code>.
      */
@@ -2170,13 +2195,17 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #getSize
      * @see #setBounds
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setSize(int width, int height) {
         resize(width, height);
     }
 
     /**
+     * Resizes this component.
+     *
+     * @param  width the new width of the component
+     * @param  height the new height of the component
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setSize(int, int)</code>.
      */
@@ -2201,13 +2230,17 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #setSize
      * @see #setBounds
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setSize(Dimension d) {
         resize(d);
     }
 
     /**
+     * Resizes this component so that it has width {@code d.width}
+     * and height {@code d.height}.
+     *
+     * @param  d the new size of this component
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setSize(Dimension)</code>.
      */
@@ -2231,6 +2264,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * Returns the bounding rectangle of this component.
+     *
+     * @return the bounding rectangle for this component
      * @deprecated As of JDK version 1.1,
      * replaced by <code>getBounds()</code>.
      */
@@ -2258,13 +2294,20 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #setSize(int, int)
      * @see #setSize(Dimension)
      * @see #invalidate
-     * @since JDK1.1
+     * @since 1.1
      */
     public void setBounds(int x, int y, int width, int height) {
         reshape(x, y, width, height);
     }
 
     /**
+     * Reshapes the bounding rectangle for this component.
+     *
+     * @param  x the <i>x</i> coordinate of the upper left corner of the rectangle
+     * @param  y the <i>y</i> coordinate of the upper left corner of the rectangle
+     * @param  width the width of the rectangle
+     * @param  height the height of the rectangle
+     *
      * @deprecated As of JDK version 1.1,
      * replaced by <code>setBounds(int, int, int, int)</code>.
      */
@@ -2402,7 +2445,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #setSize(int, int)
      * @see       #setSize(Dimension)
      * @see #invalidate
-     * @since     JDK1.1
+     * @since     1.1
      */
     public void setBounds(Rectangle r) {
         setBounds(r.x, r.y, r.width, r.height);
@@ -2631,6 +2674,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
 
 
     /**
+     * Returns the component's preferred size.
+     *
+     * @return the component's preferred size
      * @deprecated As of JDK version 1.1,
      * replaced by <code>getPreferredSize()</code>.
      */
@@ -2701,6 +2747,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * Returns the minimum size of this component.
+     *
+     * @return the minimum size of this component
      * @deprecated As of JDK version 1.1,
      * replaced by <code>getMinimumSize()</code>.
      */
@@ -2781,6 +2830,8 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * components.  The value should be a number between 0 and 1
      * where 0 represents alignment along the origin, 1 is aligned
      * the furthest away from the origin, 0.5 is centered, etc.
+     *
+     * @return the horizontal alignment of this component
      */
     public float getAlignmentX() {
         return CENTER_ALIGNMENT;
@@ -2792,6 +2843,8 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * components.  The value should be a number between 0 and 1
      * where 0 represents alignment along the origin, 1 is aligned
      * the furthest away from the origin, 0.5 is centered, etc.
+     *
+     * @return the vertical alignment of this component
      */
     public float getAlignmentY() {
         return CENTER_ALIGNMENT;
@@ -2883,7 +2936,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #doLayout()
      * @see       LayoutManager
      * @see       Container#validate
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void validate() {
         synchronized (getTreeLock()) {
@@ -2926,7 +2979,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #doLayout
      * @see       LayoutManager
      * @see       java.awt.Container#isValidateRoot
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void invalidate() {
         synchronized (getTreeLock()) {
@@ -3021,7 +3074,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return a graphics context for this component, or <code>null</code>
      *             if it has none
      * @see       #paint
-     * @since     JDK1.0
+     * @since     1.0
      */
     public Graphics getGraphics() {
         if (peer instanceof LightweightPeer) {
@@ -3085,7 +3138,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #getPeer
      * @see       java.awt.peer.ComponentPeer#getFontMetrics(Font)
      * @see       Toolkit#getFontMetrics(Font)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public FontMetrics getFontMetrics(Font font) {
         // This is an unsupported hack, but left in for a customer.
@@ -3125,7 +3178,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #contains
      * @see       Toolkit#createCustomCursor
      * @see       Cursor
-     * @since     JDK1.1
+     * @since     1.1
      */
     public void setCursor(Cursor cursor) {
         this.cursor = cursor;
@@ -3157,8 +3210,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * not have a cursor set, the cursor of its parent is returned.
      * If no cursor is set in the entire hierarchy,
      * <code>Cursor.DEFAULT_CURSOR</code> is returned.
+     *
+     * @return the cursor for this component
      * @see #setCursor
-     * @since      JDK1.1
+     * @since 1.1
      */
     public Cursor getCursor() {
         return getCursor_NoClientCode();
@@ -3212,7 +3267,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *
      * @param g the graphics context to use for painting
      * @see       #update
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void paint(Graphics g) {
     }
@@ -3248,7 +3303,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param g the specified context to use for updating
      * @see       #paint
      * @see       #repaint()
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void update(Graphics g) {
         paint(g);
@@ -3264,7 +3319,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *
      * @param     g   the graphics context to use for painting
      * @see       #paint
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void paintAll(Graphics g) {
         if (isShowing()) {
@@ -3308,7 +3363,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
 
      *
      * @see       #update(Graphics)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void repaint() {
         repaint(0, 0, 0, width, height);
@@ -3327,7 +3382,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param tm maximum time in milliseconds before update
      * @see #paint
      * @see #update(Graphics)
-     * @since JDK1.0
+     * @since 1.0
      */
     public void repaint(long tm) {
         repaint(tm, 0, 0, width, height);
@@ -3351,7 +3406,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param     width   the width
      * @param     height  the height
      * @see       #update(Graphics)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void repaint(int x, int y, int width, int height) {
         repaint(0, x, y, width, height);
@@ -3377,7 +3432,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param     width    the width
      * @param     height   the height
      * @see       #update(Graphics)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void repaint(long tm, int x, int y, int width, int height) {
         if (this.peer instanceof LightweightPeer) {
@@ -3411,7 +3466,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
                 (width > 0) && (height > 0)) {
                 PaintEvent e = new PaintEvent(this, PaintEvent.UPDATE,
                                               new Rectangle(x, y, width, height));
-                Toolkit.getEventQueue().postEvent(e);
+                SunToolkit.postEvent(SunToolkit.targetToAppContext(this), e);
             }
         }
     }
@@ -3430,7 +3485,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * graphics context is the bounding rectangle of this component.
      * @param     g   the graphics context to use for printing
      * @see       #paint(Graphics)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void print(Graphics g) {
         paint(g);
@@ -3445,7 +3500,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * graphics context is the bounding rectangle of this component.
      * @param     g   the graphics context to use for printing
      * @see       #print(Graphics)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void printAll(Graphics g) {
         if (isShowing()) {
@@ -3525,7 +3580,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see     Graphics#drawImage(Image, int, int, int, int, Color, java.awt.image.ImageObserver)
      * @see     Graphics#drawImage(Image, int, int, int, int, java.awt.image.ImageObserver)
      * @see     java.awt.image.ImageObserver#imageUpdate(java.awt.Image, int, int, int, int, int)
-     * @since   JDK1.0
+     * @since   1.0
      */
     public boolean imageUpdate(Image img, int infoflags,
                                int x, int y, int w, int h) {
@@ -3550,7 +3605,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Creates an image from the specified image producer.
      * @param     producer  the image producer
      * @return    the image produced
-     * @since     JDK1.0
+     * @since     1.0
      */
     public Image createImage(ImageProducer producer) {
         ComponentPeer peer = this.peer;
@@ -3572,7 +3627,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *    <code>true</code>.
      * @see #isDisplayable
      * @see GraphicsEnvironment#isHeadless
-     * @since     JDK1.0
+     * @since     1.0
      */
     public Image createImage(int width, int height) {
         ComponentPeer peer = this.peer;
@@ -3643,7 +3698,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *                       to be notified as the image is being prepared
      * @return    <code>true</code> if the image has already been fully
      *           prepared; <code>false</code> otherwise
-     * @since     JDK1.0
+     * @since     1.0
      */
     public boolean prepareImage(Image image, ImageObserver observer) {
         return prepareImage(image, -1, -1, observer);
@@ -3665,7 +3720,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return    <code>true</code> if the image has already been fully
      *          prepared; <code>false</code> otherwise
      * @see       java.awt.image.ImageObserver
-     * @since     JDK1.0
+     * @since     1.0
      */
     public boolean prepareImage(Image image, int width, int height,
                                 ImageObserver observer) {
@@ -3701,7 +3756,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      #prepareImage(Image, int, int, java.awt.image.ImageObserver)
      * @see      Toolkit#checkImage(Image, int, int, java.awt.image.ImageObserver)
      * @see      java.awt.image.ImageObserver
-     * @since    JDK1.0
+     * @since    1.0
      */
     public int checkImage(Image image, ImageObserver observer) {
         return checkImage(image, -1, -1, observer);
@@ -3737,7 +3792,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      #prepareImage(Image, int, int, java.awt.image.ImageObserver)
      * @see      Toolkit#checkImage(Image, int, int, java.awt.image.ImageObserver)
      * @see      java.awt.image.ImageObserver
-     * @since    JDK1.0
+     * @since    1.0
      */
     public int checkImage(Image image, int width, int height,
                           ImageObserver observer) {
@@ -3942,6 +3997,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
          * a lost state.
          */
         protected boolean validatedContents; // = false
+
         /**
          * Size of the back buffers.  (Note: these fields were added in 6.0
          * but kept package-private to avoid exposing them in the spec.
@@ -3949,7 +4005,15 @@ public abstract class Component implements ImageObserver, MenuContainer,
          * protected when they were introduced in 1.4, but now we just have
          * to live with that decision.)
          */
+
+         /**
+          * The width of the back buffers
+          */
         int width;
+
+        /**
+         * The height of the back buffers
+         */
         int height;
 
         /**
@@ -4304,6 +4368,8 @@ public abstract class Component implements ImageObserver, MenuContainer,
 
         /**
          * Creates the back buffers
+         *
+         * @param numBuffers the number of buffers to create
          */
         protected void createBackBuffers(int numBuffers) {
             if (numBuffers == 0) {
@@ -4593,6 +4659,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * better performance is desired, or if page-flipping is used as the
      * buffer strategy.
      *
+     * @param ignoreRepaint {@code true} if the paint messages from the OS
+     *                      should be ignored; otherwise {@code false}
+     *
      * @since 1.4
      * @see #getIgnoreRepaint
      * @see Canvas#createBufferStrategy
@@ -4619,16 +4688,25 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Checks whether this component "contains" the specified point,
      * where <code>x</code> and <code>y</code> are defined to be
      * relative to the coordinate system of this component.
+     *
      * @param     x   the <i>x</i> coordinate of the point
      * @param     y   the <i>y</i> coordinate of the point
+     * @return {@code true} if the point is within the component;
+     *         otherwise {@code false}
      * @see       #getComponentAt(int, int)
-     * @since     JDK1.1
+     * @since     1.1
      */
     public boolean contains(int x, int y) {
         return inside(x, y);
     }
 
     /**
+     * Checks whether the point is inside of this component.
+     *
+     * @param  x the <i>x</i> coordinate of the point
+     * @param  y the <i>y</i> coordinate of the point
+     * @return {@code true} if the point is within the component;
+     *         otherwise {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by contains(int, int).
      */
@@ -4641,10 +4719,13 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Checks whether this component "contains" the specified point,
      * where the point's <i>x</i> and <i>y</i> coordinates are defined
      * to be relative to the coordinate system of this component.
+     *
      * @param     p     the point
+     * @return {@code true} if the point is within the component;
+     *         otherwise {@code false}
      * @throws    NullPointerException if {@code p} is {@code null}
      * @see       #getComponentAt(Point)
-     * @since     JDK1.1
+     * @since     1.1
      */
     public boolean contains(Point p) {
         return contains(p.x, p.y);
@@ -4669,13 +4750,20 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *                <code>null</code> if the location
      *                is outside this component
      * @see       #contains(int, int)
-     * @since     JDK1.0
+     * @since     1.0
      */
     public Component getComponentAt(int x, int y) {
         return locate(x, y);
     }
 
     /**
+     * Returns the component occupying the position specified (this component,
+     * or immediate child component, or null if neither
+     * of the first two occupies the location).
+     *
+     * @param  x the <i>x</i> coordinate to search for components at
+     * @param  y the <i>y</i> coordinate to search for components at
+     * @return the component at the specified location or {@code null}
      * @deprecated As of JDK version 1.1,
      * replaced by getComponentAt(int, int).
      */
@@ -4687,15 +4775,17 @@ public abstract class Component implements ImageObserver, MenuContainer,
     /**
      * Returns the component or subcomponent that contains the
      * specified point.
-     * @param     p   the point
-     * @see       java.awt.Component#contains
-     * @since     JDK1.1
+     * @param  p the point
+     * @return the component at the specified location or {@code null}
+     * @see java.awt.Component#contains
+     * @since 1.1
      */
     public Component getComponentAt(Point p) {
         return getComponentAt(p.x, p.y);
     }
 
     /**
+     * @param  e the event to deliver
      * @deprecated As of JDK version 1.1,
      * replaced by <code>dispatchEvent(AWTEvent e)</code>.
      */
@@ -4866,16 +4956,6 @@ public abstract class Component implements ImageObserver, MenuContainer,
               }
               break;
 
-          case WindowEvent.WINDOW_CLOSING:
-              if (toolkit instanceof WindowClosingListener) {
-                  windowClosingException = ((WindowClosingListener)
-                                            toolkit).windowClosingNotify((WindowEvent)e);
-                  if (checkWindowClosingException()) {
-                      return;
-                  }
-              }
-              break;
-
           default:
               break;
         }
@@ -4926,21 +5006,6 @@ public abstract class Component implements ImageObserver, MenuContainer,
                       break;
                   default:
                       break;
-                }
-            }
-        }
-
-        /*
-         * 8. Special handling for 4061116 : Hook for browser to close modal
-         *    dialogs.
-         */
-        if (id == WindowEvent.WINDOW_CLOSING && !e.isConsumed()) {
-            if (toolkit instanceof WindowClosingListener) {
-                windowClosingException =
-                    ((WindowClosingListener)toolkit).
-                    windowClosingDelivered((WindowEvent)e);
-                if (checkWindowClosingException()) {
-                    return;
                 }
             }
         }
@@ -5048,20 +5113,6 @@ public abstract class Component implements ImageObserver, MenuContainer,
                 }
                 return true;
             }
-        }
-        return false;
-    }
-
-    boolean checkWindowClosingException() {
-        if (windowClosingException != null) {
-            if (this instanceof Dialog) {
-                ((Dialog)this).interruptBlocking();
-            } else {
-                windowClosingException.fillInStackTrace();
-                windowClosingException.printStackTrace();
-                windowClosingException = null;
-            }
-            return true;
         }
         return false;
     }
@@ -5224,7 +5275,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.ComponentListener
      * @see      #removeComponentListener
      * @see      #getComponentListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void addComponentListener(ComponentListener l) {
         if (l == null) {
@@ -5248,7 +5299,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.ComponentListener
      * @see      #addComponentListener
      * @see      #getComponentListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void removeComponentListener(ComponentListener l) {
         if (l == null) {
@@ -5286,7 +5337,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.FocusListener
      * @see      #removeFocusListener
      * @see      #getFocusListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void addFocusListener(FocusListener l) {
         if (l == null) {
@@ -5317,7 +5368,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.FocusListener
      * @see      #addFocusListener
      * @see      #getFocusListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void removeFocusListener(FocusListener l) {
         if (l == null) {
@@ -5618,7 +5669,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.KeyListener
      * @see      #removeKeyListener
      * @see      #getKeyListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void addKeyListener(KeyListener l) {
         if (l == null) {
@@ -5649,7 +5700,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.KeyListener
      * @see      #addKeyListener
      * @see      #getKeyListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void removeKeyListener(KeyListener l) {
         if (l == null) {
@@ -5687,7 +5738,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.MouseListener
      * @see      #removeMouseListener
      * @see      #getMouseListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void addMouseListener(MouseListener l) {
         if (l == null) {
@@ -5718,7 +5769,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.MouseListener
      * @see      #addMouseListener
      * @see      #getMouseListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void removeMouseListener(MouseListener l) {
         if (l == null) {
@@ -5756,7 +5807,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.MouseMotionListener
      * @see      #removeMouseMotionListener
      * @see      #getMouseMotionListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void addMouseMotionListener(MouseMotionListener l) {
         if (l == null) {
@@ -5787,7 +5838,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see      java.awt.event.MouseMotionListener
      * @see      #addMouseMotionListener
      * @see      #getMouseMotionListeners
-     * @since    JDK1.1
+     * @since    1.1
      */
     public synchronized void removeMouseMotionListener(MouseMotionListener l) {
         if (l == null) {
@@ -6072,7 +6123,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see        #processEvent
      * @see        #disableEvents
      * @see        AWTEvent
-     * @since      JDK1.1
+     * @since      1.1
      */
     protected final void enableEvents(long eventsToEnable) {
         long notifyAncestors = 0;
@@ -6108,7 +6159,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * from being delivered to this component.
      * @param      eventsToDisable   the event mask defining the event types
      * @see        #enableEvents
-     * @since      JDK1.1
+     * @since      1.1
      */
     protected final void disableEvents(long eventsToDisable) {
         long notifyAncestors = 0;
@@ -6285,7 +6336,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #processInputMethodEvent
      * @see       #processHierarchyEvent
      * @see       #processMouseWheelEvent
-     * @since     JDK1.1
+     * @since     1.1
      */
     protected void processEvent(AWTEvent e) {
         if (e instanceof FocusEvent) {
@@ -6351,7 +6402,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see         java.awt.event.ComponentListener
      * @see         #addComponentListener
      * @see         #enableEvents
-     * @since       JDK1.1
+     * @since       1.1
      */
     protected void processComponentEvent(ComponentEvent e) {
         ComponentListener listener = componentListener;
@@ -6414,7 +6465,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see         #addFocusListener
      * @see         #enableEvents
      * @see         #dispatchEvent
-     * @since       JDK1.1
+     * @since       1.1
      */
     protected void processFocusEvent(FocusEvent e) {
         FocusListener listener = focusListener;
@@ -6480,7 +6531,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see         #addKeyListener
      * @see         #enableEvents
      * @see         #isShowing
-     * @since       JDK1.1
+     * @since       1.1
      */
     protected void processKeyEvent(KeyEvent e) {
         KeyListener listener = keyListener;
@@ -6522,7 +6573,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see         java.awt.event.MouseListener
      * @see         #addMouseListener
      * @see         #enableEvents
-     * @since       JDK1.1
+     * @since       1.1
      */
     protected void processMouseEvent(MouseEvent e) {
         MouseListener listener = mouseListener;
@@ -6570,7 +6621,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see         java.awt.event.MouseMotionListener
      * @see         #addMouseMotionListener
      * @see         #enableEvents
-     * @since       JDK1.1
+     * @since       1.1
      */
     protected void processMouseMotionEvent(MouseEvent e) {
         MouseMotionListener listener = mouseMotionListener;
@@ -6746,6 +6797,8 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @return {@code true} if the event was handled, {@code false} otherwise
      * @deprecated As of JDK version 1.1
      * replaced by processEvent(AWTEvent).
      */
@@ -6789,6 +6842,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseEvent(MouseEvent).
      */
@@ -6798,6 +6855,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseMotionEvent(MouseEvent).
      */
@@ -6807,6 +6868,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseEvent(MouseEvent).
      */
@@ -6816,6 +6881,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseMotionEvent(MouseEvent).
      */
@@ -6825,6 +6894,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseEvent(MouseEvent).
      */
@@ -6834,6 +6907,10 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  x the x coordinate
+     * @param  y the y coordinate
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processMouseEvent(MouseEvent).
      */
@@ -6843,6 +6920,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  key the key pressed
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processKeyEvent(KeyEvent).
      */
@@ -6852,6 +6932,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  key the key pressed
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processKeyEvent(KeyEvent).
      */
@@ -6861,6 +6944,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  what the object acted on
+     * @return {@code false}
      * @deprecated As of JDK version 1.1,
      * should register this component as ActionListener on component
      * which fires action events.
@@ -6882,7 +6968,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see       #isDisplayable
      * @see       #removeNotify
      * @see #invalidate
-     * @since JDK1.0
+     * @since 1.0
      */
     public void addNotify() {
         synchronized (getTreeLock()) {
@@ -6985,7 +7071,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      *
      * @see       #isDisplayable
      * @see       #addNotify
-     * @since JDK1.0
+     * @since 1.0
      */
     public void removeNotify() {
         KeyboardFocusManager.clearMostRecentFocusOwner(this);
@@ -7070,6 +7156,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param  evt the event to handle
+     * @param  what the object focused
+     * @return  {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processFocusEvent(FocusEvent).
      */
@@ -7079,6 +7168,9 @@ public abstract class Component implements ImageObserver, MenuContainer,
     }
 
     /**
+     * @param evt  the event to handle
+     * @param what the object focused
+     * @return  {@code false}
      * @deprecated As of JDK version 1.1,
      * replaced by processFocusEvent(FocusEvent).
      */
@@ -7094,7 +7186,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @return <code>true</code> if this <code>Component</code> is
      * focusable; <code>false</code> otherwise
      * @see #setFocusable
-     * @since JDK1.1
+     * @since 1.1
      * @deprecated As of 1.4, replaced by <code>isFocusable()</code>.
      */
     @Deprecated
@@ -7433,7 +7525,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #isFocusable
      * @see #isDisplayable
      * @see KeyboardFocusManager#clearGlobalFocusOwner
-     * @since JDK1.0
+     * @since 1.0
      */
     public void requestFocus() {
         requestFocusHelper(false, true);
@@ -7862,7 +7954,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Transfers the focus to the next component, as though this Component were
      * the focus owner.
      * @see       #requestFocus()
-     * @since     JDK1.1
+     * @since     1.1
      */
     public void transferFocus() {
         nextFocus();
@@ -8070,7 +8162,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param     popup the popup menu to be added to the component.
      * @see       #remove(MenuComponent)
      * @exception NullPointerException if {@code popup} is {@code null}
-     * @since     JDK1.1
+     * @since     1.1
      */
     public void add(PopupMenu popup) {
         synchronized (getTreeLock()) {
@@ -8095,7 +8187,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Removes the specified popup menu from the component.
      * @param     popup the popup menu to be removed
      * @see       #add(PopupMenu)
-     * @since     JDK1.1
+     * @since     1.1
      */
     @SuppressWarnings("unchecked")
     public void remove(MenuComponent popup) {
@@ -8126,7 +8218,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * <code>null</code>.
      *
      * @return  a string representation of this component's state
-     * @since     JDK1.0
+     * @since     1.0
      */
     protected String paramString() {
         final String thisName = Objects.toString(getName(), "");
@@ -8140,7 +8232,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
     /**
      * Returns a string representation of this component and its values.
      * @return    a string representation of this component
-     * @since     JDK1.0
+     * @since     1.0
      */
     public String toString() {
         return getClass().getName() + '[' + paramString() + ']';
@@ -8150,7 +8242,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Prints a listing of this component to the standard system output
      * stream <code>System.out</code>.
      * @see       java.lang.System#out
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void list() {
         list(System.out, 0);
@@ -8161,7 +8253,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * stream.
      * @param    out   a print stream
      * @throws   NullPointerException if {@code out} is {@code null}
-     * @since    JDK1.0
+     * @since    1.0
      */
     public void list(PrintStream out) {
         list(out, 0);
@@ -8174,7 +8266,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param     indent   number of spaces to indent
      * @see       java.io.PrintStream#println(java.lang.Object)
      * @throws    NullPointerException if {@code out} is {@code null}
-     * @since     JDK1.0
+     * @since     1.0
      */
     public void list(PrintStream out, int indent) {
         for (int i = 0 ; i < indent ; i++) {
@@ -8187,7 +8279,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Prints a listing to the specified print writer.
      * @param  out  the print writer to print to
      * @throws NullPointerException if {@code out} is {@code null}
-     * @since JDK1.1
+     * @since 1.1
      */
     public void list(PrintWriter out) {
         list(out, 0);
@@ -8200,7 +8292,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @param indent the number of spaces to indent
      * @throws NullPointerException if {@code out} is {@code null}
      * @see       java.io.PrintStream#println(java.lang.Object)
-     * @since JDK1.1
+     * @since 1.1
      */
     public void list(PrintWriter out, int indent) {
         for (int i = 0 ; i < indent ; i++) {
@@ -8390,6 +8482,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * Returns an array of all the listeners which have been associated
      * with the named property.
      *
+     * @param  propertyName the property name
      * @return all of the <code>PropertyChangeListener</code>s associated with
      *         the named property; if no such listeners have been added or
      *         if <code>propertyName</code> is <code>null</code>, an empty
@@ -8400,8 +8493,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * @see #getPropertyChangeListeners
      * @since 1.4
      */
-    public PropertyChangeListener[] getPropertyChangeListeners(
-                                                                            String propertyName) {
+    public PropertyChangeListener[] getPropertyChangeListeners(String propertyName) {
         synchronized (getObjectLock()) {
             if (changeSupport == null) {
                 return new PropertyChangeListener[0];
@@ -8506,7 +8598,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
         if (changeSupport == null || oldValue == newValue) {
             return;
         }
-        firePropertyChange(propertyName, new Character(oldValue), new Character(newValue));
+        firePropertyChange(propertyName, Character.valueOf(oldValue), Character.valueOf(newValue));
     }
 
     /**
@@ -8879,6 +8971,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * This method changes layout-related information, and therefore,
      * invalidates the component hierarchy.
      *
+     * @param  o the orientation to be set
      *
      * @see ComponentOrientation
      * @see #invalidate
@@ -8906,6 +8999,7 @@ public abstract class Component implements ImageObserver, MenuContainer,
      * subclasses that wish to respect orientation should call this method to
      * get the component's orientation before performing layout or drawing.
      *
+     * @return the orientation to order the elements or text
      * @see ComponentOrientation
      *
      * @author Laura Werner, IBM
@@ -9063,7 +9157,16 @@ public abstract class Component implements ImageObserver, MenuContainer,
          */
         private volatile transient int propertyListenersCount = 0;
 
+        /**
+         * A component listener to track show/hide/resize events
+         * and convert them to PropertyChange events.
+         */
         protected ComponentListener accessibleAWTComponentHandler = null;
+
+        /**
+         * A listener to track focus events
+         * and convert them to PropertyChange events.
+         */
         protected FocusListener accessibleAWTFocusHandler = null;
 
         /**
